--- a/src/Kooco.Pikachu.Blazor/Pages/InventoryManagement/AdjustStockModal.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/InventoryManagement/AdjustStockModal.razor
@@ -56,7 +56,7 @@
                         <Column ColumnSize="ColumnSize.Is6">
                             <Validation MessageLocalizer="@LH.Localize">
                                 <Field>
-                                    <FieldLabel required>@L["Amount"]</FieldLabel>
+                                    <FieldLabel required>@L["AdjustStockAmount"]</FieldLabel>
                                     <NumericEdit TValue="int?" @bind-Value="@Entity.Amount">
                                         <Feedback>
                                             <ValidationError />
