--- a/src/Kooco.Pikachu.Blazor/Pages/InventoryManagement/InventoryLogs.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/InventoryManagement/InventoryLogs.razor
@@ -122,7 +122,8 @@
                 <DataGridColumn TItem="InventoryLogDto"
                                 Sortable="false"
                                 Caption="@L["View"]"
-                                Width="30px">
+                                Width="100px"
+                                TextAlignment="TextAlignment.Center">
                     <DisplayTemplate>
                         <Button Class="pk-btn-icon indigo" Clicked="() => View(context)">
                             <Icon Name="IconName.Eye"></Icon>
