#PK-1603 Implement campaign id tracking

--- a/src/Kooco.Pikachu.Blazor/Pages/InventoryManagement/InventoryLogs.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/InventoryManagement/InventoryLogs.razor
@@ -88,6 +88,9 @@
                             case InventoryActionType.ItemSold:
                                 @L["ItemSold", context.OrderNumber]
                                 break;
+                            case InventoryActionType.AddOnProductSold:
+                                @L["AddOnProductSold", context.OrderNumber]
+                                break;
                         }
                     </DisplayTemplate>
                 </DataGridColumn>
