#PK-1610 Add @key to Copy component in member tags loop
Added the @key directive to the Copy component within the foreach loop over Selected.MemberTags to improve rendering performance and stability in Blazor.

--- a/src/Kooco.Pikachu.Blazor/Pages/EdmManagement/EdmList.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/EdmManagement/EdmList.razor
@@ -332,7 +332,7 @@
                 @foreach (var memberTag in Selected.MemberTags)
                 {
                     <Div Class="mb-1">
-                        <Copy Text="@memberTag" IconAlignment="Alignment.Start"></Copy>
+                        <Copy @key=@memberTag Text="@memberTag" IconAlignment="Alignment.Start"></Copy>
                     </Div>
                 }
             }
