#PK-1582 Add support for useable campaigns
Introduces the ability to specify whether a campaign can be used with all or specific discounts, shopping credits, and add-on products. Adds new domain entities (UseableCampaign, UseableCampaignGroup), updates DTOs, validation, and mapping logic, and extends the Blazor UI to allow selection of combinable campaigns. Also adds new API endpoints and updates the database context and repository to support these relationships.

--- a/src/Kooco.Pikachu.Blazor/Pages/Campaigns/CreateCampaign.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Campaigns/CreateCampaign.razor
@@ -104,14 +104,9 @@
                                                 Name="TargetAudience"
                                                 CheckedValue="@TargetAudienceCheckedValue"
                                                 CheckedValueChanged="@OnTargetAudienceChanged">
-                                        <ChildContent>
-                                            <Radio TValue="string" Value="@CampaignConsts.TargetAudience.All">@L["All"]</Radio>
-                                            <Radio TValue="string" Value="@CampaignConsts.TargetAudience.AllMembers">@L["AllMembers"]</Radio>
-                                            <Radio TValue="string" Value="@CampaignConsts.TargetAudience.SpecificMembers">@L["SpecificMembers"]</Radio>
-                                        </ChildContent>
-                                        <Feedback>
-                                            <ValidationError />
-                                        </Feedback>
+                                        <Radio TValue="string" Value="@CampaignConsts.TargetAudience.All">@L["All"]</Radio>
+                                        <Radio TValue="string" Value="@CampaignConsts.TargetAudience.AllMembers">@L["AllMembers"]</Radio>
+                                        <Radio TValue="string" Value="@CampaignConsts.TargetAudience.SpecificMembers">@L["SpecificMembers"]</Radio>
                                     </RadioGroup>
                                     @if (TargetAudienceCheckedValue == CampaignConsts.TargetAudience.SpecificMembers)
                                     {
@@ -266,6 +261,11 @@
                                         <Check TValue="bool" @bind-Checked="Entity.ShoppingCredit.ApplicableToAddOnProducts">@L["AddOnProducts"]</Check>
                                         <Check TValue="bool" @bind-Checked="Entity.ShoppingCredit.ApplicableToShippingFees">@L["ShippingFees"]</Check>
                                     </Field>
+                                }
+
+                                @if (Entity.PromotionModule.HasValue)
+                                {
+                                    <CampaignUsageComponent Entity="Entity" EditContext="_editContext" LH="LH" CampaignOptions="CampaignOptions" />
                                 }
                             </CardBody>
                         </Card>
