#PK-1632 Fix null check for PaymentMethod display
Updated the PaymentMethod display template to check for a value before rendering, preventing possible null reference issues.

--- a/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberOrdersTab.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Members/MemberDetails/MemberOrdersTab.razor
@@ -139,7 +139,10 @@
                                 Field="@nameof(OrderDto.PaymentMethod)"
                                 Caption="@L["PaymentMethod"]">
                     <DisplayTemplate>
-                        @L[context.PaymentMethod?.ToString()]
+                        @if (context.PaymentMethod.HasValue)
+                        {
+                            @L[context.PaymentMethod.ToString()]
+                        }
                     </DisplayTemplate>
                 </DataGridColumn>
                 <DataGridColumn TItem="OrderDto"
